# aws-iot-sdk-cpp

./: .gitlab-ci.yml  README.md  build.sh  setup.sh
config/: toolchain-arm-linux.cmake
sample/source/: CMakeLists.txt  moxa_sample_mqtt.cpp  moxa_sample_mqtt.hpp
